--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   <link href="//fonts.googleapis.com/css2?family=Jost:wght@300;400;600&display=swap" rel="stylesheet">
   <!-- link lightbox -->
   <link rel="stylesheet" href="./css/lightbox.css">
-  <link rel="stylesheet" href="./css/gallery.css">
+  <link rel="stylesheet" href="./css/about.css">
 </head>
 
 <body>
@@ -37,13 +37,13 @@
                 <a class="nav-link" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link active" href="#">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./services.html">Services</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="">Gallery</a>
+                <a class="nav-link" href="./gallery.html">Gallery</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -70,67 +70,60 @@
   <section class="caurousel text-center">
     <div class="caurousel-content py-sm-5">
         <div class="container py-2">
-            <h2 class="title">Gallery</h2>
+            <h2 class="title">About Us</h2>
             <ul class="mt-2 text-center">
                 <li><a href="">Home </a></li>
-                <li class="active"><i class="mx-2 fa fa-arrow-right"></i> Gallery </li>
+                <li class="active"><i class="mx-2 fa fa-arrow-right"></i> About </li>
             </ul>
         </div>
     </div>
   </section>
-  <!-- carausel -->
-  <section class="gallery">
+  <!-- about -->
+ <section class="about">
     <div class="container">
-      <div class="gallery-header text-center">
-        <h6 class="sub-title">VIEW GALLERY</h6>
-        <h3 class="hny-title">Latest Gallery</h3>
-      </div>
-      <div class="item-group">
-        <div class="row">
-          <div class="col-lg-4 gallery-item">
-            <a href="./img/g1.jpg"data-lightbox="gallery">
-            <img src="./img/g1.jpg" alt=""></a>
-          </div>
-          <div class="col-lg-4 gallery-item">
-            <a href="./img/g3.jpg"data-lightbox="gallery">
-              <img src="./img/g3.jpg" alt=""></a>
-          </div>
-          <div class="col-lg-4 gallery-item">
-            <a href="./img/g5.jpg"data-lightbox="gallery">
-              <img src="./img/g5.jpg" alt=""></a>
-          </div>
+        <div class="about-content row">
+            <div class="about-left col-lg-5 pl-lg-4">
+                <h6 class="sub-title">ABOUT US</h6>
+                <h3 class="hny-title">We Have 10+ Years Of Experience.</h3>
+                <h4>Let Us Take Care Of Your Pets!</h4>
+            </div>
+            <div class="about-right col-lg-7 pl-lg-5">
+                <p class="pSub">Lorem ipsum dolor sit amet,Ea consequuntur .Ea consequuntur illum facere aperiam sequi optio consectetur adipisicing elitFuga, suscipit totam animi consequatur saepe blanditiis</p>
+                <p class="my-3 pSub">Lorem ipsum dolor sit amet,Ea consequuntur illum facere aperiam sequi optio consectetur adipisicing elit. Fuga, suscipit totam animi consequatur saepe blanditiis</p>
+                <a href="./services.html" class="read">Read More</a>
+            </div>
         </div>
-        <div class="row">
-          <div class="col-lg-4 gallery-item">
-            <a href="./img/g2.jpg"data-lightbox="gallery">
-              <img src="./img/g2.jpg" alt=""></a>
-          </div>
-          <div class="col-lg-4 gallery-item">
-            <a href="./img/g4.jpg"data-lightbox="gallery">
-              <img src="./img/g4.jpg" alt=""></a>
-          </div>
-          <div class="col-lg-4 gallery-item">
-            <a href="./img/g6.jpg"data-lightbox="gallery">
-              <img src="./img/g6.jpg" alt=""></a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-4 gallery-item">
-            <a href="./img/g7.jpg"data-lightbox="gallery">
-              <img src="./img/g7.jpg" alt=""></a>
-          </div>
-          <div class="col-lg-4 gallery-item">
-            <a href="./img/g6.jpg"data-lightbox="gallery">
-              <img src="./img/g6.jpg" alt=""></a>
-          </div>
-          <div class="col-lg-4 gallery-item">
-            <a href="./img/g9.jpg"data-lightbox="gallery">
-              <img src="./img/g9.jpg" alt=""></a>
-          </div>
-        </div>
-      </div>
     </div>
-  </section>
+ </section>
+ <seciton class="history">
+    <div class="feature py-5">
+        <div class="container py-5">
+            <div class="history-content py-3">
+                <h6 class="sub-title">OUR HISTORY OF POOCH CARE</h6>
+                <h3 class="hny-title">Our History</h3>
+                <p class="mt-3 mb-5 pSub">Lorem ipsum dolor sit amet,Ea consequuntur .Ea consequuntur illum facere aperiam sequi optio consectetur adipisicing elitFuga, suscipit totam animi consequatur saepe blanditiis.Lorem ipsum dolor sit amet,Ea consequuntur illum facere aperiam sequi optio consectetur adipisicing elit.</p>
+                <div class="historyYear row">
+                    <div class="history-item col-lg-3">
+                        <h5 class="year mb-1">2017</h5>
+                        <p>Lorem ipsum dolor sit amet</p>
+                    </div>
+                    <div class="history-item col-lg-3">
+                        <h5 class="year mb-1">2017</h5>
+                        <p>Lorem ipsum dolor sit amet</p>
+                    </div>
+                    <div class="history-item col-lg-3">
+                        <h5 class="year mb-1">2017</h5>
+                        <p>Lorem ipsum dolor sit amet</p>
+                    </div>
+                    <div class="history-item col-lg-3">
+                        <h5 class="year mb-1">2017</h5>
+                        <p>Lorem ipsum dolor sit amet</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+ </seciton>
   <!-- footer  -->
   <footer class="">
     <div class="container py-lg-3">
@@ -185,8 +178,8 @@
       <p class="copy-footer-28 text-center"> © 2020 Pooch Care. All Rights Reserved. Design by <a href="">W3Layouts</a></p>
     </div>
   </footer>
-   <!-- back to top -->
-   <a href="#" class="backToTop cd-top text-replace js-cd-top">
+  <!-- back to top -->
+  <a href="#" class="backToTop cd-top text-replace js-cd-top">
     <i class="fa fa-arrow-up"></i>
   </a>
   <script src="./js/util.js"></script>
