--- a/gallery.html
+++ b/gallery.html
@@ -79,8 +79,8 @@
     </div>
   </section>
   <!-- carausel -->
-  <section class="gallery">
-    <div class="container">
+  <section class="gallery py-lg-5">
+    <div class="container py-lg-5">
       <div class="gallery-header text-center">
         <h6 class="sub-title">VIEW GALLERY</h6>
         <h3 class="hny-title">Latest Gallery</h3>
