--- a/services.html
+++ b/services.html
@@ -50,13 +50,13 @@
                   Blog
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="./blogpost.html">Blog Posts</a></li>
+                  <li><a class="dropdown-item" href="./blogsingle.html">Blog single</a></li>
                   
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="./contact.html">Contact</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Services</a>
