--- a/blogpost.html
+++ b/blogpost.html
@@ -37,7 +37,7 @@
                 <a class="nav-link" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">About</a>
+                <a class="nav-link " href="./about.html">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./services.html">Services</a>
@@ -46,7 +46,7 @@
                 <a class="nav-link" href="./gallery.html">Gallery</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Blog
                 </a>
                 <ul class="dropdown-menu">
