--- a/Home.html
+++ b/Home.html
@@ -52,7 +52,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="./Home.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link " href="./about.html">About</a>
