--- a/blogsingle.html
+++ b/blogsingle.html
@@ -34,7 +34,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="./Home.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./about.html">About</a>
